# Velox

./: .gitignore  LICENSE  README.md  meson.build
.cache/clangd/index/: cache.c.3A81B023F43F612A.idx  cache.h.ECD68C104EB96C52.idx  clock.c.05B28FD2042D0CF3.idx  clock.h.314B1AC22E428365.idx  controls_overlay.c.F8EF899C87E39EA6.idx  controls_overlay.h.D41F0B7A539E8064.idx  discovery.c.72A17CC4282BFBE0.idx  discovery.h.0A7147CD86560B65.idx  event_bus.c.6B153063B5779A69.idx  event_bus.h.7B09FEE17AB1A373.idx  history.c.6A34600FF04E48AA.idx  history.h.2CD9CEFE3EB19F3F.idx  hwaccel.c.B0D6BEF2A913ABBC.idx  hwaccel.h.41735268C25020DD.idx  inhibit.c.5CF33AC535BCA479.idx  inhibit.h.0F2ACE3985D1B25D.idx  log.c.4D3777D1BCB364ED.idx  log.h.C28BD6C777E38461.idx  main.c.E90EEDC05B2974C9.idx  metadata.c.1FE99159D2D89214.idx  metadata.h.82D39675D5CA5A79.idx  mpris.c.D608317FED470FE3.idx  mpris.h.E7EF49747DDDB082.idx  pip_window.c.1ECE475DD75C2E6C.idx  pip_window.h.6FD024C5176582A5.idx  pipeline.c.990EB3CE40805F1B.idx  pipeline.h.66E825F521EB19F0.idx  player.c.111A863EA1B3CEFA.idx  player.h.BE2B02BEB91E2305.idx  playlist.c.5586BD2EB87501C8.idx  playlist.h.4A73173E6A0DAA65.idx  playlist_panel.c.A2123B853F13F141.idx  playlist_panel.h.EB69CDFE84A639A7.idx  plugin.c.C86F5395E415F916.idx  plugin.h.8E0C1FCCE863A599.idx  seek_bar.c.8463AB8E0E8CEECE.idx  seek_bar.h.3491AA3DFA14F22F.idx  session.c.941F845EA75BB741.idx  session.h.F2653E12E2698CCA.idx  settings.c.E79C41C65DCE3027.idx  (+16 more)
data/: gschemas.compiled  io.github.velox.desktop  io.github.velox.gschema.xml  io.github.velox.metainfo.xml  meson.build
shaders/: video.frag  video.vert
src/: main.c  velox.h
src/core/: event_bus.c  event_bus.h  player.c  player.h  playlist.c  playlist.h  plugin.c  plugin.h  session.c  session.h
src/media/: discovery.c  discovery.h  history.c  history.h  metadata.c  metadata.h  thumbnail.c  thumbnail.h
src/pipeline/: clock.c  clock.h  hwaccel.c  hwaccel.h  pipeline.c  pipeline.h  subtitle_engine.c  subtitle_engine.h
src/platform/: inhibit.c  inhibit.h  mpris.c  mpris.h  settings.c  settings.h
src/ui/: Read Full Codebase.md  controls_overlay.c  controls_overlay.h  pip_window.c  pip_window.h  playlist_panel.c  playlist_panel.h  seek_bar.c  seek_bar.h  settings_dialog.c  settings_dialog.h  subtitle_overlay.c  subtitle_overlay.h  video_widget.c  video_widget.h  window.c  window.h
src/utils/: cache.c  cache.h  log.c  log.h  thread_pool.c  thread_pool.h
